# idp-design

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
data/LAMMPS/20231101_single_chain/ACTR/: Rg.out  log.lammps  result.lammpstrj
data/LAMMPS/20231101_single_chain/Ash1/: Rg.out  log.lammps
data/LAMMPS/20231101_single_chain/K25/: log.lammps
data/LAMMPS/20231101_single_chain/NSP/: Rg.out  result.lammpstrj
data/LAMMPS/20231102_sc_high_precision/Ash1/: result.lammpstrj
data/LAMMPS/20231102_sc_high_precision/K25/: log.lammps  result.lammpstrj
data/LAMMPS/20231102_sc_high_precision/NSP/: log.lammps
data/LAMMPS/20231102_sc_high_precision/P53/: log.lammps
data/MPIPI-GG/: log.lammps  template_no_minimize.in
data/MPIPI-GG/E25K25/: result.lammpstrj
data/MPIPI-GG/EK25/: in
data/MPIPI-GG/P53/: in  log.lammps  result.lammpstrj
data/MPIPI-GG/maybe-rg35/: seq.txt
docs/source/: conf.py  idp_design.energy.rst  idp_design.energy_prob.rst  idp_design.observables.rst  idp_design.utils.rst  index.rst  usage.rst
examples/: design_custom.ipynb  design_rg_charge_constrained.py  design_rg_salt_sensor.py
experiments/: design_binder.py  design_custom.ipynb  design_rg.py  design_rg_charge_constrained.py  design_rg_salt_sensor.py  rg_opt_batch.py
figures/: plot_figures.ipynb
figures/data/fig2/: notes.txt  rep_pseq_n50.npy
figures/data/fig2/rg20_check/: params.txt  summary.txt
figures/data/fig2/rg20_keys/: notes.txt
figures/data/fig2/rg20_opt/: alba_rg.txt  entropy.txt  params.txt  ref_alba_rg.txt  ref_iter.txt  ref_rg.txt  rg.txt  rgs_i0.npy  rgs_i25.npy  rgs_i49.npy
figures/data/fig3/alba-disagree/: notes.txt
figures/data/fig3/linker/: contact_map_distances.npy  contact_map_distances.txt  notes.txt
figures/data/fig3/loop/: contact_map_distances.npy  contact_map_distances.txt  notes.txt
figures/data/fig4/n50-rg12.5-0.2-0.8/: params.txt
figures/data/fig6/fuslc/: notes.txt
idp_design/: __init__.py  checkpoint.py  energy.py  energy_prob.py  observable.py  utils.py
params/: debye.txt  wf.txt  wf_gg.txt
refdata/LAMMPS/20231101_single_chain/Ash1/: result.lammpstrj
refdata/LAMMPS/20231101_single_chain/K25/: Rg.out  result.lammpstrj
refdata/LAMMPS/20231101_single_chain/NSP/: log.lammps
refdata/MPIPI-GG/: template.in
refdata/MPIPI-GG/E25K25/: Rg.out
refdata/MPIPI-GG/EK25/: Rg.out  result.lammpstrj
refdata/MPIPI-GG/P53/: Rg.out
refdata/MPIPI-GG/maybe-rg35/: Rg.out  result.lammpstrj
tests/: test_energy.py  test_energy_prob.py
(+806 files in other folders)
